--- a/index.html
+++ b/index.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<script src="./vue.js"></script>
 </head>
 <body>
+	<div id="root"></div>
 
-<div ng-app="MyApp">
-	<div ng-controller="myCtrl">
-		<input type="text" ng-model="inputValue">
-		<input type="button" value="新增" ng-click="handleAddClick()">
-	 	<ul>
-	 		<li ng-repeat="item in todoList track by $index">{{item}}
-				<span ng-click="handleDeleteClick($index)">删除</span>
-	 		</li>
-	 	</ul>
-	</div>
-</div>
-<script>
-	var app = angular.module("MyApp", []);
-	app.controller("myCtrl", function($scope){
-		$scope.todoList = [];
-		$scope.inputValue = "";
-		$scope.handleAddClick = function(){
-			$scope.todoList.push($scope.inputValue);
-			$scope.inputValue="";
-		}
-		$scope.handleDeleteClick = function(index){
-			$scope.todoList.splice(index,1)
-		}
-	})
-	
-</script>
+	<script>
+
+		Vue.component("list-item", {
+			template: `<li>{{itemprop}}<span @click="handleDelete(index)">删除</span></li>`,
+			props: ["itemprop", "index"],
+			methods: {
+				handleDelete: function(index){
+					this.$emit("delete", index);
+				}
+			}
+		});
+
+		var app = new Vue({
+			el: "#root",
+			template: `
+				<div>
+					<input type="text" v-model="message"/>
+					<button @click="handleClick">提交</button>
+					<ul>
+						<list-item v-for="(item, index) in items" v-bind:itemprop="item" v-bind:index="index" @delete="handleDelete"></list-item>
+					</ul>
+				</div>
+				`,
+			data: {
+				message: "",
+				items: []
+			},
+			methods: {
+				handleClick: function() {
+					this.items.push(this.message);
+					this.message = '';
+				},
+				handleDelete: function(index){
+					this.items.splice(index, 1);
+				}
+			}
+		});
+
+
+	</script>
 </body>
 </html>
