--- a/echarts/dataset-simple1.html
+++ b/echarts/dataset-simple1.html
@@ -8,7 +8,7 @@
 
 	<body style="height: 300px; margin: 0">
 		<div id="container" style="height: 300px"></div>
-		<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
+		<script type="text/javascript" src="echarts.js"></script>
 		<script type="text/javascript">
 			var dom = document.getElementById("container");
 			var myChart = echarts.init(dom);
