--- a/liuxiang/city.html
+++ b/liuxiang/city.html
@@ -432,5 +432,7 @@
 	});
 	var indexPage = new IndexPage();
 	indexPage.init();
-	window.a = 1;
+	function fn() {
+		console.log(123);
+	}
 </script>
