--- a/liuxiang/11.html
+++ b/liuxiang/11.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 	</head>
 
@@ -10,7 +11,8 @@
 
 		<script src="js/jq3_2_1.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			
+			alert("width="+window.innerWidth);
+			alert("height="+window.innerHeight)
 		</script>
 	</body>
 
