--- a/liuxiang/canvas_butterfly.html
+++ b/liuxiang/canvas_butterfly.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta charset="utf-8" />
-		<title>飞飞是个大笨蛋</title>
+		<title></title>
 		<style type="text/css">
 			* {
 				margin: 0;
