--- a/liuxiang/11.html
+++ b/liuxiang/11.html
@@ -4,15 +4,45 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
+		<title>横屏和竖屏</title>
+		<style type="text/css">
+			* {
+				margin: 0;
+				padding: 0;
+			}
+			
+			html {
+				font-size: 50px;
+			}
+			
+			html,
+			body {
+				width: 100%;
+				height: 100%;
+			}
+			
+			.container {
+				font-size: .6rem;
+				text-align: center;
+			}
+		</style>
 	</head>
 
 	<body>
+		<div class="container">我是横屏显示的</div>
 
 		<script src="js/jq3_2_1.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			alert("width="+window.innerWidth);
-			alert("height="+window.innerHeight)
+			function horizontalScreen() {
+				$(".container").css({
+					"transform": "rotateZ(" + (window.innerHeight >= window.innerWidth ? "90" : "0") + "deg)",
+					"line-height": window.innerHeight + "px"
+				});
+			}
+			horizontalScreen();
+			$(window).on("resize", function() {
+				horizontalScreen();
+			})
 		</script>
 	</body>
 
