--- a/fundTimeValuation/fundDetail.html
+++ b/fundTimeValuation/fundDetail.html
@@ -108,7 +108,7 @@
 					</div>
 					<div class="fund-foresight-state">
 						<div class="fund-foresight-BullishSpeed fundForesightBullishSpeed">
-							<!--<div class="fund-foresight-Bullish-speed"></div>-->
+							<div class="fund-foresight-Bullish-speed"></div>
 						</div>
 						<div class="fund-foresight-Bullish-stateControl">
 							<div class="fund-foresight-Bullish-container fundForesightBullishContainer">
